http_php/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
    app: php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: php:8.0-apache
        ports:
        - containerPort: 80
        volumeMounts:
        - name: php-code
          mountPath: /var/www/html
      volumes:
      - name: php-code
        hostPath:
          path: /root/php
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: php
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
